--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,5 +27,5 @@ dependencies {
     compile 'com.android.support:cardview-v7:23.1.1'
     compile 'com.vstechlab.easyfonts:easyfonts:1.0.0'
     compile 'com.jakewharton:butterknife:7.0.1'
-    compile files('libs/npay.jar')
+    compile files('libs/npaylibrary.jar')
 }
