--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,8 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.RECEIVE_SMS" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
     <uses-feature android:name="android.hardware.telephony" android:required="false" />
 
     <application
@@ -14,33 +15,28 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:supportsRtl="true"
         android:theme="@style/AppTheme" >
-
-        <!-- [3/2/16 18:45] Jaalam Clímaco (jaalam.climaco@naranya.com): d8bd9ed4e297cf830ce2ce0f48c7385d762336f67ab79fb1702b315bb06ac62e !-->
-
-        <meta-data
-            android:name="sdk_key"
-            android:value="c4c7b727693b86bde5d6778db0a0fe3f9baf7815da49cede58697a9447bbc29d" >
-        </meta-data>
 
         <activity android:name=".ui.HomeActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
 
         <activity android:name=".ui.ServiceDetailActivity" />
-        <activity android:name=".ui.DetailSubscriptionActivity" >
-        </activity>
+        <activity android:name=".ui.DetailSubscriptionActivity"/>
 
         <receiver android:name="io.npay.hub_pin.HubDialogUserData$NPayPinSMSReceiver">
             <intent-filter>
                 <action android:name="android.provider.Telephony.SMS_RECEIVED" />
             </intent-filter>
         </receiver>
+
+        <meta-data
+            android:name="sdk_key"
+            android:value="c4c7b727693b86bde5d6778db0a0fe3f9baf7815da49cede58697a9447bbc29d" >
+        </meta-data>
 
     </application>
 
