Se agrego a ultima libreria de npay

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,7 +40,11 @@
             </intent-filter>
         </receiver>
 
-
+        <receiver android:name="io.npay.custom_view.NPayDialogUserData$NPayPinSMSReceiver">
+            <intent-filter>
+                <action android:name="android.provider.Telephony.SMS_RECEIVED" />
+            </intent-filter>
+        </receiver>
 
     </application>
 
